--- a/html/word.html
+++ b/html/word.html
@@ -95,7 +95,7 @@
 
         // 点击 "下一页" 按钮跳转到指定页面
         function goToNextPage() {
-            window.location.href = "nextpage.html"; // 替换为你想跳转的页面地址
+            window.location.href = "nextpage.html";
         }
 
         // 自动进入全屏的函数
