--- a/html/1.html
+++ b/html/1.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-   <meta id="viewport" name="viewport" content="width=1920, initial-scale=1">
     <script>
         (function() {
             const designWidth = 1920; // 设计稿宽度
@@ -94,10 +93,10 @@
                 </div>
                 <div class="div_is_typed" id="div_is_typed">
                     <div id="div_is_img">
-                        <img class="img_is_typed" src="https://web-img.20it.cn/static/images/2303/08c7bdd2b4dd396ff1603e40079cdad0.gif">
+                        <img class="img_is_typed" src="https://github.com/wxdove/picforyuri/blob/main/7.jpg">
                     </div>
                     <span id="span_is_typed">
-                            <div id="text-source" style="display:none;">We have known each other for so many years by accident. During the time we met, the youth we shared with you was no less than love. I hope you can be the best version of yourself at the best age and always be happy. You should never compromise yourself. In the days when we cannot meet in person, we should confide in each other and be gentle with each other.</div>
+                            <div id="text-source" style="display:none;">Hi yuri,We have known each other for so many days by accident. During the time we met, the youth we shared with you was no less than love. I hope you can be the best version of yourself at the best age and always be happy. You should never compromise yourself. In the days when we cannot meet in person, we should confide in each other and be gentle with each other.finally happy birthday！！</div>
                             <div id="text-view"></div>
                     </span>
                 </div>
